<resources>
    <string name="app_name">Cachí Fitness Center</string>
    <string name="gym_cachi_name">Cachí Fitness Center</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_taebo">Taebo</string>
    <string name="button_pesas">Pesas</string>

    <!-- Pesas -->
    <string name="customers_pesas">Clientes que han venido hoy:</string>
    <string name="see_details_customer">Detalles</string>
    <string name="add_pay">Agregar pago</string>
    <string name="add_customer_today">Agregar cliente</string>

    <!-- Add Customer -->
    <string name="customer_name">Nombre</string>
    <string name="customer_lastname">Apellidos</string>
    <string name="customer_startdate">Fecha de inicio</string>
    <string name="customer_nickname">Conocido como</string>

    <!-- Menu -->
    <string name="all_customers">Todos los clientes</string>
    <string name="add_customer">Registrar nuevo cliente</string>
    <string name="all_defaulter">Morosos</string>
    <string name="current_payments">Pagos vigentes</string>

    <!-- All customers -->
    <string name="add_customers">Agregar clientes</string>

    <!-- Add payment -->
    <string name="add_day_payment">Día</string>
    <string name="add_week_payment">Semana</string>
    <string name="add_month_payment">Mes</string>

    <!-- See customer details -->
    <string name="see_customer_details">Detalles del cliente: </string>

    <!-- See defaulter customers -->
    <string name="defaulter_customers">Clientes morosos: </string>

    <!-- Customer bill to pay -->
    <string name="button_cancel_bill_to_pay">Cancelar día</string>

</resources>
