<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainactivity_background"
    tools:context=".activities.AddCustomer"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_customer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/customer_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText_customer_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/customer_lastname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editText_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_customer_name" />

    <EditText
        android:id="@+id/editText_customer_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/customer_nickname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editText_customer_lastname"
        app:layout_constraintTop_toBottomOf="@+id/editText_customer_lastname" />

    <EditText
        android:id="@+id/editText_customer_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/customer_startdate"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="@+id/editText_customer_nickname"
        app:layout_constraintTop_toBottomOf="@+id/editText_customer_nickname" />

    <Button
        android:id="@+id/button_accept_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="10dp"
        android:onClick="addCustomer"
        android:text="@string/button_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="3dp"
        android:onClick="cancel"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_accept_mainActivity" />

    <EditText
        android:id="@+id/editText_customerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/editText_customer_startdate"
        app:layout_constraintTop_toBottomOf="@+id/editText_customer_startdate" />
</android.support.constraint.ConstraintLayout>