<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPayment"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/textView_payment_customer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_day_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="16dp"
        android:onClick="day"
        android:text="@string/add_day_payment"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_week_payment"
        app:layout_constraintEnd_toStartOf="@+id/button_week_payment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_week_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:layout_marginEnd="26dp"
        android:onClick="week"
        android:text="@string/add_week_payment"
        app:layout_constraintBottom_toTopOf="@+id/textView_payment_details"
        app:layout_constraintEnd_toStartOf="@+id/button_month_payment"
        app:layout_constraintStart_toEndOf="@+id/button_day_payment" />

    <Button
        android:id="@+id/button_month_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="month"
        android:text="@string/add_month_payment"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_week_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_week_payment" />

    <TextView
        android:id="@+id/textView_payment_details"
        android:layout_width="218dp"
        android:layout_height="101dp"
        android:layout_marginBottom="155dp"
        android:layout_marginEnd="57dp"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginStart="87dp"
        android:text="@string/button_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="50dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_month_payment"
        app:layout_constraintStart_toEndOf="@+id/button_add_payment" />
</android.support.constraint.ConstraintLayout>