<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper2"
    tools:context=".activities.AllCustomers"
    tools:layout_editor_absoluteY="73dp">


    <Button
        android:id="@+id/button_add_pay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:onClick="addPayment"
        android:text="@string/add_pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_all_customers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/all_customers"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_customerToSearch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_customers_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="seeDetailsCustomer"
        android:text="@string/see_details_customer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listview_all_customers"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_marginBottom="83dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_customerToSearch2" />

    <EditText
        android:id="@+id/editText_customerToSearch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="Buscar cliente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/listview_all_customers"
        app:layout_constraintEnd_toStartOf="@+id/button_customerToSearch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_all_customers" />

    <Button
        android:id="@+id/button_customerToSearch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="25dp"
        android:onClick="customerToSearch2"
        android:text="Buscar"
        app:layout_constraintBottom_toTopOf="@+id/listview_all_customers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_customerToSearch2"
        app:layout_constraintTop_toBottomOf="@+id/textView_all_customers" />
</android.support.constraint.ConstraintLayout>